Aress7/src/objects/Decision_Tree__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Decision_Tree__c</referenceTo>
        <relationshipLabel>Decision Tree</relationshipLabel>
        <relationshipName>Decision_Tree</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Redirect_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Redirect To</label>
        <referenceTo>Decision_Tree__c</referenceTo>
        <relationshipLabel>Decision Tree (Redirect To)</relationshipLabel>
        <relationshipName>Decision_Tree1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Starting_Node__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Starting Node</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_Area__c</fullName>
        <label>Text Area</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Answer</fullName>
                </value>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>Redirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Decision Tree</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Text_Area__c</columns>
        <columns>Starting_Node__c</columns>
        <columns>Type__c</columns>
        <columns>Parent__c</columns>
        <columns>Redirect_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>Node Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Decision Tree</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>